--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,6 +14,23 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%
+}
+
+.main nav {
+  width: 80%;
+  display: flex;
+}
+
+.main nav ul {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.main nav ul li {
+  list-style: none;
+  font-size: 22px;
 }
 
 .footer {
